force-app/main/default/objects/tour_inclusions__c/tour_inclusions__c.object-meta.xml
<CustomObject>
    <label>tour_inclusions</label>
    <nameField>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>tour_inclusions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>