force-app/main/default/objects/tour_inclusions__c/fields/body__c.field-meta.xml
<CustomField>
    <fullName>body__c</fullName>
    <label>body</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>